# JPMC_assignment

./: pyproject.toml  requirements.txt
tests/: test_supper_simple_stock_market.py
