[tool.poetry]
name = "jpmc-assignment"
version = "0.1.0"
description = "JP Morgan interview assignment"
authors = ["Plamen Stilyianov <plamen.stilyianov@outlook.com>"]
readme = "README.md"
packages = [{include = "trading"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.6"
pandas = "^2.2.3"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
